--- a/index.html
+++ b/index.html
@@ -7,28 +7,15 @@
     <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 <body>
-    <div id="main-body">
+    <div class="container">
         <div class="header"></div>
-            <div class="left-content">
-                <div class="name">
-                    <h4>Instagram</h4>
-                </div>
-                <div class="menu">
-                    <button class="menu-button">Home</button>
-                    <button class="menu-button">Search</button>
-                    <button class="menu-button">Explore</button>
-                    <button class="menu-button">Reels</button>
-                    <button class="menu-button">Messages</button>
-                    <button class="menu-button">Notifications</button>
-                    <button class="menu-button">Create</button>
-                    <button class="menu-button">Profile</button>
-                </div>
-                <div class="more">
-                    <button class="menu-button" style="height: 100%;">More</button>
-                </div>
-            </div>
-            <div class="main-content"></div>
-            <div class="right-content"></div>
+        <div class="left-content"></div>
+        <div class="main-content">
+            <div class="scroller"></div>
+        </div>
+        <div class="right-content">
+            <div class="right-content-scroller"></div>
+        </div>
     </div>
 </body>
 </html>
