right and left content structure added

--- a/index.html
+++ b/index.html
@@ -8,13 +8,50 @@
 </head>
 <body>
     <div class="container">
-        <div class="header"></div>
-        <div class="left-content"></div>
+        <div class="header">
+            <h4>instagram</h4>
+        </div>
+        <div class="left-content">
+            <div class="name">
+                <h2>Instagram</h2>
+            </div>
+            <div class="menu">
+                <button class="menu-button">Home</button>
+                <button class="menu-button">Home</button>
+                <button class="menu-button">Home</button>
+                <button class="menu-button">Home</button>
+                <button class="menu-button">Home</button>
+                <button class="menu-button">Home</button>
+                <button class="menu-button">Home</button>
+                <button class="menu-button">Home</button>
+                <button id="more" class="menu-button">More</button>
+            </div>
+        </div>
         <div class="main-content">
             <div class="scroller"></div>
         </div>
         <div class="right-content">
-            <div class="right-content-scroller"></div>
+            <div class="right-content-scroller">
+                <div class="account">account</div>
+                <div class="suggested">Suggested for you</div>
+                <div class="chat">
+                    <div class="chatbox">chatbox</div>
+                    <div class="chatbox">chatbox</div>
+                    <div class="chatbox">chatbox</div>
+                    <div class="chatbox">chatbox</div>
+                    <div class="chatbox">chatbox</div>
+                    <div class="chatbox">chatbox</div>
+                    <div class="chatbox">chatbox</div>
+                    <div class="chatbox">chatbox</div>
+                    <div class="chatbox">chatbox</div>
+                    <div class="chatbox">chatbox</div>
+                    <div class="chatbox">chatbox</div>
+                    <div class="chatbox">chatbox</div>
+                    <div class="chatbox">chatbox</div>
+                    <div class="chatbox">chatbox</div>
+                    <div class="chatbox">chatbox</div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
