--- a/index.html
+++ b/index.html
@@ -34,35 +34,63 @@
             <div class="scroller">
                 <div class="stories">
                     <div class="story">
-                        <div class="round"></div>
+                        <div class="round">
+                            <img class="story-round-img" src="Media/img3.jpg" alt="No image">
+                        </div>
                         <div class="sname">Midhun</div>
                     </div>
                     <div class="story">
-                        <div class="round"></div>
+                        <div class="round">
+                            <img class="story-round-img" src="Media/img3.jpg" alt="No image">
+                        </div>
                         <div class="sname">Midhun</div>
                     </div>
                     <div class="story">
-                        <div class="round"></div>
+                        <div class="round">
+                            <img class="story-round-img" src="Media/img3.jpg" alt="No image">
+                        </div>
                         <div class="sname">Midhun</div>
                     </div>
                     <div class="story">
-                        <div class="round"></div>
+                        <div class="round">
+                            <img class="story-round-img" src="Media/img3.jpg" alt="No image">
+                        </div>
                         <div class="sname">Midhun</div>
                     </div>
                     <div class="story">
-                        <div class="round"></div>
+                        <div class="round">
+                            <img class="story-round-img" src="Media/img3.jpg" alt="No image">
+                        </div>
                         <div class="sname">Midhun</div>
                     </div>
                     <div class="story">
-                        <div class="round"></div>
+                        <div class="round">
+                            <img class="story-round-img" src="Media/img3.jpg" alt="No image">
+                        </div>
                         <div class="sname">Midhun</div>
                     </div>
                     <div class="story">
-                        <div class="round"></div>
+                        <div class="round">
+                            <img class="story-round-img" src="Media/img3.jpg" alt="No image">
+                        </div>
                         <div class="sname">Midhun</div>
                     </div>
                     <div class="story">
-                        <div class="round"></div>
+                        <div class="round">
+                            <img class="story-round-img" src="Media/img3.jpg" alt="No image">
+                        </div>
+                        <div class="sname">Midhun</div>
+                    </div>
+                    <div class="story">
+                        <div class="round">
+                            <img class="story-round-img" src="Media/img3.jpg" alt="No image">
+                        </div>
+                        <div class="sname">Midhun</div>
+                    </div>
+                    <div class="story">
+                        <div class="round">
+                            <img class="story-round-img" src="Media/img3.jpg" alt="No image">
+                        </div>
                         <div class="sname">Midhun</div>
                     </div>
                 </div>
