Left side designadded

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Instagram Home Page</title>
     <link rel="stylesheet" href="index.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+      </style>
 </head>
 <body>
     <div class="container">
@@ -14,18 +17,18 @@
         </div>
         <div class="left-content">
             <div class="name">
-                <h2>Instagram</h2>
+                <h2 style="font-family: 'Dancing Script', cursive;">Instagram</h2>
             </div>
             <div class="menu">
-                <button class="menu-button">Home</button>
-                <button class="menu-button">Home</button>
-                <button class="menu-button">Home</button>
-                <button class="menu-button">Home</button>
-                <button class="menu-button">Home</button>
-                <button class="menu-button">Home</button>
-                <button class="menu-button">Home</button>
-                <button class="menu-button">Home</button>
-                <button id="more" class="menu-button">More</button>
+                <button class="menu-button"> <i class="fa-solid fa-house"></i>  Home</button>
+                <button class="menu-button"> <i class="fa-solid fa-magnifying-glass"></i>  Search</button>
+                <button class="menu-button"> <i class="fa-solid fa-hand-sparkles"></i>  Explore</button>
+                <button class="menu-button"> <i class="fa-solid fa-film"></i>  Reels</button>
+                <button class="menu-button"> <i class="fa-regular fa-envelope"></i>  Messages</button>
+                <button class="menu-button"> <i class="fa-regular fa-heart"></i>  Notifications</button>
+                <button class="menu-button"> <i class="fa-regular fa-square-plus"></i>  Creste</button>
+                <button class="menu-button"> <i class="fa-regular fa-circle"></i>  Profile</button>
+                <button id="more" class="menu-button"> <i class="fa-solid fa-bars"></i>  More</button>
             </div>
         </div>
 
