Design completed strating to merging

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
                                 <img class="topbar-round-img" src="Media/img3.jpg" alt="No Image">
                             </div>
                             <div class="topbar-name">
-                                <h5 >midhun_kalarikkal</h5>
+                                <h5 >midhun_kalarikkal   .6h</h5>
                             </div>
                             <div class="topbar-time">
-                                <h5>.6h</h5>
+                                <h5></h5>
                             </div>
                             <div class="topbar-button">
                                 <button><i class="fa-solid fa-ellipsis-vertical"></i></button>
@@ -147,10 +147,10 @@
                                 <img class="topbar-round-img" src="Media/img16.jpeg" alt="No Image">
                             </div>
                             <div class="topbar-name">
-                                <h5>Elon_musk</h5>
+                                <h5>Elon_musk   .7h</h5>
                             </div>
                             <div class="topbar-time">
-                                <h5>.6h</h5>
+                                <h5></h5>
                             </div>
                             <div class="topbar-button">
                                 <button><i class="fa-solid fa-ellipsis-vertical"></i></button>
