--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="Media/instagram.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram Home Page</title>
     <link rel="stylesheet" href="index.css" type="text/css">
