story image error ixed

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </div>
                     <div class="story">
                         <div class="round">
-                            <img class="story-round-img" src="Media/img1.jpg" alt="No image">
+                            <img class="story-round-img" src="Media/img1.jpeg" alt="No image">
                         </div>
                         <div class="sname">Jithu</div>
                     </div>
